Fixed alignment of name column

--- a/src/styles/layout/_assigned_layout.sass
+++ b/src/styles/layout/_assigned_layout.sass
@@ -145,7 +145,6 @@
                   align-items: center
                   grid-column-gap: $gutter * 8
                   grid-template-columns: auto 10px
-                  justify-content: center
 
                   .icon
                     display: grid
